[gd_scene load_steps=4 format=3 uid="uid://ciwmo8oon64p2"]

[ext_resource type="PackedScene" uid="uid://kjojpf53ut4x" path="res://BASE JUEGO/CircleObject.tscn" id="1_jqbmq"]
[ext_resource type="Script" path="res://BASE JUEGO/Level.gd" id="1_xw07e"]
[ext_resource type="PackedScene" uid="uid://b8dl02mxq46ir" path="res://BASE JUEGO/KeyObject.tscn" id="2_fkxup"]

[node name="Level" type="Node2D"]
script = ExtResource("1_xw07e")
KeyObject = ExtResource("2_fkxup")

[node name="Objects" type="Node2D" parent="."]

[node name="ColorObject" parent="Objects" instance=ExtResource("1_jqbmq")]
position = Vector2(1383, 729)

[node name="Sprite2D" type="Sprite2D" parent="Objects/ColorObject"]

[node name="ColorObject2" parent="Objects" instance=ExtResource("1_jqbmq")]
position = Vector2(1065, 734)

[node name="Sprite2D" type="Sprite2D" parent="Objects/ColorObject2"]

[node name="ColorObject3" parent="Objects" instance=ExtResource("1_jqbmq")]
position = Vector2(774, 732)

[node name="Sprite2D" type="Sprite2D" parent="Objects/ColorObject3"]

[node name="ColorObject4" parent="Objects" instance=ExtResource("1_jqbmq")]
position = Vector2(494, 734)

[node name="Sprite2D" type="Sprite2D" parent="Objects/ColorObject4"]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(937, 67)
